# rust-diesel-examples

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/2022-04-28-111606_school/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
